# projeto-yuann

./: .env.example  .gitignore  2026-03-21-020805-legalboard-modernization-implementation-plan.txt  AGENTS.md  CLAUDE.md  DEPLOY_GUIDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  legalboard.db  nixpacks.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_contract_version_extraction_metadata.py  0003_add_contract_analysis_findings.py  0004_add_contract_archive_fields.py  0005_add_notification_dismissed_at.py  0006_add_user_model.py  0007_add_contract_lifecycle_fields.py  0008_add_contract_version_history.py  0009_add_contract_analysis_corrections.py  0010_migrate_to_postgres.py  0011_add_third_party_contract_source.py  0012_add_contract_embeddings_table.py  0013_add_performance_indexes.py  0014_consultative_rbac.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/application/: alerts.py  analysis.py  contract_pipeline.py  contract_upload.py  contract_versions.py  dashboard.py  version_diff.py
backend/app/core/: app_factory.py  config.py  database_url.py
backend/app/db/: base.py  session.py
backend/app/domain/: __init__.py  auth.py  clause_extraction.py  contract_analysis.py  contract_metadata.py  events.py  notifications.py  playbook.py
backend/app/infrastructure/: __init__.py  contract_chunker.py  docx_generator.py  embeddings.py  gemini_client.py  gemini_models.py  llm_client.py  llm_models.py  notifications.py  openai_client.py  (+4 more)
backend/tests/: conftest.py  test_clause_extraction.py
(+268 files in other folders)
