[project]
name = "legalboard-backend"
version = "0.1.0"
description = "FastAPI backend for the LegalTech MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic[email]>=2.9.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.12",
    "google-genai>=1.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.16,<2.0",
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
